@@ -7,16 +7,17 @@ public class CreateUser {
 
 	public CreateUser(int userid, String auth) {
 		try {
-			Process p = Runtime.getRuntime().exec(
-					"sudo useradd -d /home/mcwrapper/servers/" + userid
-							+ " -s /bin/bash -G mcwrapper_users mcwrapper_"
-							+ userid);
+			ProcessBuilder pb = new ProcessBuilder("sudo", "useradd", "-d",
+					"/home/mcwrapper/servers/" + userid, "-s", "/bin/bash",
+					"-G", "mcwrapper_users", "mcwrapper_" + userid);
+			Process p = pb.start();
 			BufferedReader in = new BufferedReader(new InputStreamReader(
 					p.getInputStream()));
 			String line;
 			while ((line = in.readLine()) != null) {
 				System.out.println(line);
 			}
+
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
@@ -24,10 +25,9 @@ public class CreateUser {
 }
 
 /*
- * ProcessBuilder pb = new ProcessBuilder("sudo", "useradd", "-d",
- * "/home/mcwrapper/servers/" + userid, "-s", "/bin/bash", "-G",
- * "mcwrapper_users", "mcwrapper_" + userid); Process p = pb.start();
- * BufferedReader in = new BufferedReader(new InputStreamReader(
- * p.getInputStream())); String line; while ((line = in.readLine()) != null) {
- * System.out.println(line); }
+ * Process p = Runtime.getRuntime().exec(
+ * "sudo useradd -d /home/mcwrapper/servers/" + userid +
+ * " -s /bin/bash -G mcwrapper_users mcwrapper_" + userid); BufferedReader in =
+ * new BufferedReader(new InputStreamReader( p.getInputStream())); String line;
+ * while ((line = in.readLine()) != null) { System.out.println(line); }
  */
